shifted css-class for correctness

--- a/app/assets/stylesheets/mission.css.scss
+++ b/app/assets/stylesheets/mission.css.scss
@@ -15,7 +15,3 @@
     text-align: center
   }
 }
-
-.assessment-description-table {
-  table-layout: fixed;
-}
